--- a/css/style.css
+++ b/css/style.css
@@ -2663,8 +2663,9 @@ button.title-info-btn:focus {
 	-ms-transform: translate(0, 0);
 	-o-transform: translate(0, 0);
 	transform: translate(0, 0);
-	line-height: 18px;
-	top: 11px;
+	line-height: 0.18rem;
+	top: 0.28rem;
+	margin-top: -0.12rem;
 }
 .sidebar-menu li a.subdrop .arrow {
 	-ms-transform: rotate(90deg);
