--- a/css/style.css
+++ b/css/style.css
@@ -1315,7 +1315,7 @@ footer 结束
 	align-items: center;
 	justify-content: space-between;
 }
-.service-box>div{
+.service-box>div.service-item{
 	width: 2.2rem;
 	height: 0.5rem;
 	display: flex;
@@ -1329,24 +1329,86 @@ footer 结束
 	padding-left: 0.1rem;
 	cursor: pointer;
 }
-.service-box>div>img{
+.service-box>div.service-item>img{
 	width: 0.36rem;
 	height: 0.36rem;
 	margin-right: 0.1rem;
 }
-.service-box>div:nth-of-type(1){
+.service-box>div.service-item.service-l{
 	margin-right: 0.2rem;
 	background: #FF7E00;
 }
-.service-box>div:nth-of-type(2){
+.service-box>div.service-item.service-r{
 	background: #C78D11;
 }
 .chatBox{
 	width: 3.36rem;
-	height: 4rem;
+	height: auto;
 	position: absolute;
-	top: -4rem;
+	top: -3.46rem;
 	right: 0;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	overflow: hidden;
+	background: #fff;
+	display: none;
+	box-shadow: 0 0 6px 4px #e5e5e5;
+}
+.chatBox-title{
+	width: 3.36rem;
+	height: 0.5rem;
+	display: flex;
+	display: -webkit-flex; /* Chrome 21+, Safari 6.1+, iOS Safari 7+, Opera 15/16 */  
+	display: -moz-flex; /* Firefox 18+ */  
+	display: -ms-flexbox; /* IE 10 */
+	align-items: center;
+	color: #fff;
+	background: #C78D11;
+	font-size: 0.16rem;
+	padding-left: 0.1rem;
+	position: relative;
+}
+.closure-box{
+	font-size: 0.20rem;
+	padding: 0.1rem;
+	position: absolute;
+	top: 50%;
+	right: 0.2rem;
+	transform: translateY(-50%);
+	cursor: pointer;
+}
+.chatBox-title>img{
+	width: 0.36rem;
+	height: 0.36rem;
+	margin-right: 0.1rem;
+}
+.QR-code-box{
+	width: 100%;
+	height: 2.5rem;
+	padding: 0.1rem;
+	text-align: center;
+}
+.QR-code-box>img{
+	max-width: 100%;
+	max-height: 100%;
+}
+.telBox p{
+	color: #fff;
+	font-size: 0.15rem;
+	line-height: 1;
+}
+.telBox p.telp-1{
+	font-size: 0.16rem;
+}
+.telBox p.telp-2{
+	margin-top: 0.05rem;
+	font-size: 0.14rem;
+}
+.telBox-1{
+	width: 100%;
+	padding: 0 0.1rem 0.1rem;
+	font-size: 0.16rem;
+	color: #333;
 }
 /* ==================================================
 	二级页面背景图区域 开始
