--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3528221 */
-  src: url('../fonts/iconfont.woff2?t=1658060628009') format('woff2'),
-       url('../fonts/iconfont.woff?t=1658060628009') format('woff'),
-       url('../fonts/iconfont.ttf?t=1658060628009') format('truetype');
+  src: url('../fonts/iconfont.woff2?t=1658196993584') format('woff2'),
+       url('../fonts/iconfont.woff?t=1658196993584') format('woff'),
+       url('../fonts/iconfont.ttf?t=1658196993584') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fanhuidingbu4:before {
+  content: "\e64b";
+}
+
+.icon-xiangshang:before {
+  content: "\e600";
 }
 
 .icon-zhengcejiedu:before {
