--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ p {
     font-size: 0.22rem;
     line-height: 0.32rem;
     font-weight: normal;
-    color: #555;
+    color: #333;
     margin-bottom: 0px;
 }
 
@@ -200,7 +200,7 @@ header.header {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 99;
+    z-index: 9999;
     background: #fff;
     border-bottom: 0px;
 }
@@ -224,6 +224,7 @@ header.header {
 	text-align: center;
 	font-family: PingFangSC-Regular, PingFang SC;
 	font-weight: 400;
+	border-radius: 20px;
 }
 
 .header.header .nav-link.active,
@@ -231,7 +232,6 @@ header.header {
 	color: #fff;
 	text-align: center;
 	background: #C78D11;
-	border-radius: 20px;
 }
 	
 /* .header.header .nav-item:hover::before {
@@ -534,7 +534,7 @@ banner  结束
 .puAway-box{
 	width: 1.34rem;
 	height: 100%;
-	position: relative;
+	position: absolute;
 	overflow: hidden;
 }
 .puAway-box>img.puAway-bg-box{
@@ -542,14 +542,35 @@ banner  结束
 	height: 100%;
 }
 .accordionbox-item .curr-bgbox {
-	flex: 1;
-	width: 0;
+	width: 4.32rem;
 	height: 100%;
 	padding: 0.2rem 0;
 	text-align: center;
 	display: block;
 	position: relative;
 	overflow: hidden;
+	position: absolute;
+
+}
+.accordionbox-item:nth-of-type(1) .puAway-box,
+.accordionbox-item:nth-of-type(2) .puAway-box,
+.accordionbox-item:nth-of-type(3) .puAway-box {
+	top: 0;
+	left: 0;
+}
+.accordionbox-item:nth-of-type(4) .puAway-box{
+	top: 0;
+	right: 0;
+}
+.accordionbox-item:nth-of-type(1) .curr-bgbox,
+.accordionbox-item:nth-of-type(2) .curr-bgbox,
+.accordionbox-item:nth-of-type(3) .curr-bgbox {
+	top: 0;
+	left: 1.34rem;
+}
+.accordionbox-item:nth-of-type(4) .curr-bgbox{
+	top: 0;
+	left: 0;
 }
 .accordionbox-item .curr-bgbox .icon-right-box{
 	width: 0.47rem;
@@ -586,8 +607,8 @@ banner  结束
 	color: #fff;
 	padding: 0 0.76rem;
 	text-align: center;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+	/* white-space: nowrap; */
+	/* text-overflow: ellipsis; */
 	overflow: hidden;
 }
 
@@ -629,15 +650,10 @@ banner  结束
 	margin: 0 auto;
 	margin-top: 0.3rem;
 	font-size: 0.2rem;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
+
 }
 .accordionbox-item.active .layer-box{
 	line-height: 4.5rem;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
 }
 .accordionbox-item.active .layer-box i{
 	display: none;
@@ -713,7 +729,7 @@ banner  结束
 	box-sizing: border-box;
 }
 .advantage-item>.ad-box:hover{
-	box-shadow: 0 0 6px 4px #e5e5e5;
+	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1000);
 }
 .ad-box-img{
 	width: 2.7rem;
@@ -773,15 +789,20 @@ banner  结束
 	width: 20%;
 	padding: 0.15rem;
 }
-.customer-bg-box>div img.customer-bgimg{
+.customer-bg-box>div>div.customer-subbg{
 	width: 100%;
 	height: 1.4rem;
+	overflow: hidden;
+}
+.customer-bg-box>div>div.customer-subbg img.customer-bgimg{
+	width: 100%;
+	height: 100%;
 	cursor: pointer;
 	-webkit-transition: all .3s ease-in-out;
 	-moz-transition: all .3s ease-in-out;
 	transition: all .3s ease-in-out;
 }
-.customer-bg-box>div img.customer-bgimg:hover{
+.customer-bg-box>div>div.customer-subbg img.customer-bgimg:hover{
 	transform: scale(1.1);
 }
 /* ==============================================
@@ -894,10 +915,27 @@ banner  结束
 .tab-content-items:hover .lernMore-i{
 	background: #bd8a4c;
 }
+
 .tab-content-items .tab-content-img{
 	border-radius: 8px;
 	width: 100%;
 	height: 2.5rem;
+	overflow: hidden;
+}
+.tab-content-items .tab-content-img>img{
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+.tab-content-items:hover .tab-content-img>img{
+	transform: scale(1.2);
+	text-align: center;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
 }
 .tab-content-items .p-time{
 	margin-top: 0.3rem;
@@ -1713,10 +1751,44 @@ footer 结束
     margin: 0 auto;
     overflow: hidden;
 }
-.culture-bgbox>img{
-    float: left;
-    width: 4.04rem;
-    height: 6.06rem;
+.culture-bgbox>div{
+	float: left;
+	width: 4.04rem;
+	height: 6.06rem;
+	position: relative;
+	cursor: pointer;
+}
+.culture-bgbox>div img.cultureBg-img{
+	width: 100%;
+	height: 100%;
+}
+.culture-bgbox>div .culture-p{
+	width: 4.04rem;
+	height: 2.2rem;
+	position: absolute;
+	left: 0;
+	z-index: 100;
+}
+.culture-bgbox>div .culture-p.culture-p-1{
+	z-index: 200;
+	display: none;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.culture-bgbox>div:hover .culture-p.culture-p-1{
+	display: block;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.culture-bgbox>div:nth-of-type(1) .culture-p,.culture-bgbox>div:nth-of-type(3) .culture-p{
+	top: 0;
+}
+.culture-bgbox>div:nth-of-type(2) .culture-p,.culture-bgbox>div:nth-of-type(4) .culture-p{
+	bottom: 0;
 }
 .info-box{
     margin: 0 -0.1rem;
@@ -1916,13 +1988,50 @@ footer 结束
     margin: 0.38rem auto 0.2rem;
 }
 .service-bg-box{
-    width: 100%;
-    height: auto;
+    width: 16.16rem;
+		height: auto;
+		margin: 0 auto;
   }
 .service-bg-box>img{
     width: 100%;
-    height: 4.2rem;
 }
+.service-bg-box>div.service-imgbox{
+	width: 100%;
+	height: 4.2rem;
+	display: flex;
+	display: -webkit-flex; /* Chrome 21+, Safari 6.1+, iOS Safari 7+, Opera 15/16 */  
+	display: -moz-flex; /* Firefox 18+ */  
+	display: -ms-flexbox; /* IE 10 */
+}
+
+.service-bg-box>div.service-imgbox>div{
+	flex: 1;
+	height: 100%;
+	position: relative;
+}
+.service-bg-box>div.service-imgbox>div img{
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+}
+.service-bg-box>div.service-imgbox>div img.serviceImg{
+	position: absolute;
+	right: 0;
+	z-index: 100;
+}
+.service-bg-box>div.service-imgbox>div img.serviceImg.serviceImg-hover{
+	z-index: 200;
+	display: none;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+
+
+
+
 
 /* ==================================================
 服务领域结束
